--- a/.dist/index.html
+++ b/.dist/index.html
@@ -108,6 +108,20 @@
           </div>
         </div>
       </section>
+      <section class="rotate-square">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="rotate-square-loader">
+                <div class="square one"></div>
+                <div class="square two"></div>
+                <div class="square three"></div>
+                <div class="square four"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
