--- a/.dist/index.html
+++ b/.dist/index.html
@@ -122,6 +122,15 @@
           </div>
         </div>
       </section>
+      <section class="layer-3d-image">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="layer-3d"><img class="image img-fluid" src="../img/bg.jpg" alt="background" srcset=""><img class="image img-fluid" src="../img/bg.jpg" alt="background" srcset=""><img class="image img-fluid" src="../img/bg.jpg" alt="background" srcset=""><img class="image img-fluid" src="../img/bg.jpg" alt="background" srcset=""></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
