--- a/.dist/index.html
+++ b/.dist/index.html
@@ -131,6 +131,15 @@
           </div>
         </div>
       </section>
+      <section class="scroll-down">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="indicator-animation"><span></span><span></span><span></span><span></span></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
