--- a/.dist/index.html
+++ b/.dist/index.html
@@ -140,6 +140,15 @@
           </div>
         </div>
       </section>
+      <section class="ring-loader">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="ring">Loading<span> </span></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
