--- a/.dist/index.html
+++ b/.dist/index.html
@@ -149,6 +149,22 @@
           </div>
         </div>
       </section>
+      <section class="product-image-slider">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <nav class="product">
+                <ul>
+                  <li><a class="img-product" href="../img/img1.jpg" target="imgBox"><img src="../img/thumb1.jpg" alt=""></a></li>
+                  <li><a class="img-product" href="../img/img2.jpg" target="imgBox"><img src="../img/thumb2.jpg" alt=""></a></li>
+                  <li><a class="img-product" href="../img/img3.jpg" target="imgBox"><img src="../img/thumb3.jpg" alt=""></a></li>
+                </ul>
+                <div class="imgBox"><img class="image-box" src="../img/img1.jpg" alt=""></div>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
