add feature videjs and update video-full-screen

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -186,6 +186,29 @@
           </div>
         </div>
       </section>
+      <section class="video-full-screen" data-vide-bg="./videos/videoFroBg">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="login-form">
+                <form action="#" method="get">
+                  <h2 class="header-content">Sign In</h2>
+                  <div class="text-username">
+                    <input type="text" name="username" placeholder="Enter username">
+                  </div>
+                  <div class="text-password">
+                    <input type="password" name="password" placeholder="Enter password">
+                  </div>
+                  <div class="button-submit">
+                    <button type="submit">Logn In</button>
+                  </div>
+                </form>
+                <div class="forget-password"><a href="#">Forget Password</a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
