udpate quote-box and wrap-text-circle

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -209,6 +209,35 @@
           </div>
         </div>
       </section>
+      <section class="quote-box">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="box"><i class="fas fa-quote-right one"></i>
+                <div class="text"><i class="fas fa-quote-left two"></i>
+                  <div class="text__content">
+                    <h2>Quote of the Day</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi facere veritatis ex delectus ea, non, exercitationem nisi eius aliquam numquam placeat odio hic cumque vel aperiam laudantium fugit blanditiis temporibus? </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="wrap-text-circle">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="wrapper">
+                <div class="circle"></div>
+                <h2>This is Wrap Text</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit provident corrupti excepturi adipisci nemo. Sed, quis excepturi repudiandae, fugit delectus ullam ipsa itaque maxime corrupti sapiente est voluptatem iste dolorem!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
