update animating perspective and clip-path backgound

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -238,6 +238,32 @@
           </div>
         </div>
       </section>
+      <section class="animating-perspective">
+        <div class="bg1"></div>
+        <div class="bg2"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="left">
+                <h1>CrytoCurrensies</h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae tempore repellendus quo, accusantium molestiae alias omnis magni illum sed eius fuga vel perspiciatis modi quasi. Neque ratione eligendi atque vel.</p>
+              </div>
+              <div class="right">
+                <nav>
+                  <ul>
+                    <li><img src="./img/appcoins.svg" alt="bitcoin icon"><span><strong>AppCoins</strong>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></span></li>
+                    <li><img src="./img/aelf.svg" alt="bitcoin icon"><span><strong>Aelfs</strong>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></span></li>
+                    <li><img src="./img/iota-1.svg" alt="bitcoin icon"><span><strong>Iotas</strong>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p></span></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
