--- a/.dist/index.html
+++ b/.dist/index.html
@@ -264,6 +264,13 @@
           </div>
         </div>
       </section>
+      <section class="sticky-section-scrolling">
+        <div class="box-image"></div>
+        <div class="box-image"></div>
+        <div class="box-image"></div>
+        <div class="box-image"></div>
+        <div class="box-image"></div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
