update tilt.js and hover-card with tilt.js

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -271,6 +271,27 @@
         <div class="box-image"></div>
         <div class="box-image"></div>
       </section>
+      <section class="hover-card-tiltjs">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4">
+              <div class="card">
+                <div class="child"></div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <div class="child"></div>
+              </div>
+            </div>
+            <div class="col-md-4">
+              <div class="card">
+                <div class="child"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
