update iphone6 layer

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -292,6 +292,29 @@
           </div>
         </div>
       </section>
+      <section class="iphone6">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="mobile">
+                <div class="screen"></div>
+                <div class="home"></div>
+                <div class="inner"></div>
+                <ul class="volume">
+                  <li></li>
+                  <li></li>
+                </ul>
+                <ul class="silent">
+                  <li> </li>
+                </ul>
+                <ul class="sleep">
+                  <li> </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
