--- a/.dist/index.html
+++ b/.dist/index.html
@@ -315,6 +315,15 @@
           </div>
         </div>
       </section>
+      <section class="reflection">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="text" data-text="Reflection">Reflection</div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
