--- a/.dist/index.html
+++ b/.dist/index.html
@@ -324,6 +324,9 @@
           </div>
         </div>
       </section>
+      <section class="move-background">
+        <div class="box"></div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
