--- a/.dist/index.html
+++ b/.dist/index.html
@@ -327,6 +327,15 @@
       <section class="move-background">
         <div class="box"></div>
       </section>
+      <section class="glowing-gradient-ring-loader">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="ring-loader"><span></span><span></span><span></span><span></span></div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
