update wave animation

--- a/.dist/index.html
+++ b/.dist/index.html
@@ -336,6 +336,9 @@
           </div>
         </div>
       </section>
+      <section class="animated-wave">
+        <div class="wave"></div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
