--- a/.dist/index.html
+++ b/.dist/index.html
@@ -339,6 +339,18 @@
       <section class="animated-wave">
         <div class="wave"></div>
       </section>
+      <section class="blur-glass-transparent">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="box">
+                <h1>This is header</h1>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, voluptatibus dicta fuga sint totam voluptate? Temporibus corrupti vel, quasi modi quo eligendi saepe labore ab alias. Ut facilis necessitatibus nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odio animi tempora, corrupti neque incidunt nobis ad tempore quos esse? Accusamus vitae veniam sint nemo explicabo voluptatibus nobis consectetur nesciunt.Lorem ipsum dolor sit amet consectetur, adipisicing elit. Labore, voluptatibus dicta fuga sint totam voluptate? Temporibus corrupti vel, quasi modi quo eligendi saepe labore ab alias. Ut facilis necessitatibus nesciunt. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quaerat odio animi tempora, corrupti neque incidunt nobis ad tempore quos esse? Accusamus vitae veniam sint nemo explicabo voluptatibus nobis consectetur nesciunt.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
