--- a/.dist/index.html
+++ b/.dist/index.html
@@ -354,6 +354,32 @@
       <section class="knockout-text">
         <h1>Place <span>Your</span><span>Text</span><span>Here....</span></h1>
       </section>
+      <section class="text-typing-animation">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="type" data-splitting="words">
+                <h2>This is typing text using Splitting.js</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt laudantium magni cumque ut iure consequatur, voluptatibus doloremque, qui ad, nisi accusamus asperiores illum dolorum magnam? Soluta molestias aliquam iusto.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur error vero nihil illo, labore eum quas quo aspernatur deleniti harum hic nobis quidem fuga debitis molestias dicta ratione et.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="text-typing-animation2">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="type" data-splitting="words">
+                <h2>This is typing text using Splitting.js</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid incidunt laudantium magni cumque ut iure consequatur, voluptatibus doloremque, qui ad, nisi accusamus asperiores illum dolorum magnam? Soluta molestias aliquam iusto.</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis consequatur error vero nihil illo, labore eum quas quo aspernatur deleniti harum hic nobis quidem fuga debitis molestias dicta ratione et.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
