--- a/.dist/index.html
+++ b/.dist/index.html
@@ -380,6 +380,23 @@
           </div>
         </div>
       </section>
+      <section class="card-hover-toggle-button">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="card">
+                <input type="checkbox" name="">
+                <div class="toggle">+ </div>
+                <div class="img-box"><img src="../img/sticky02.jpg" alt="" srcset=""></div>
+                <div class="content">
+                  <h2>Someone is famous</h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Recusandae eius quas molestiae optio veritatis, deleniti possimus voluptatibus, aliquam iusto tempora est commodi eos facilis, ducimus magnam facere! Illo, ullam consectetur.</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
