--- a/.dist/index.html
+++ b/.dist/index.html
@@ -397,6 +397,14 @@
           </div>
         </div>
       </section>
+      <section class="glowing-gradient-border">
+        <div class="card">
+          <div class="content">
+            <h2>This is content</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium repellendus quibusdam ea rem, quia iste nostrum enim deserunt, doloremque ut qui veritatis consequatur natus neque odio architecto. Suscipit, veniam perspiciatis?</p>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
