--- a/.dist/index.html
+++ b/.dist/index.html
@@ -405,6 +405,7 @@
           </div>
         </div>
       </section>
+      <section class="hover-button-effect"><a class="button-fake" href="#"><span></span><span></span><span></span><span></span>Button</a></section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
