--- a/.dist/index.html
+++ b/.dist/index.html
@@ -406,6 +406,23 @@
         </div>
       </section>
       <section class="hover-button-effect"><a class="button-fake" href="#"><span></span><span></span><span></span><span></span>Button</a></section>
+      <section class="nike-design">
+        <div class="container">
+          <div class="row">
+            <div class="col">
+              <div class="img-box"><img src="../img/nike.png" alt="" srcset=""></div>
+              <div class="details">
+                <div class="content">
+                  <h2>Nike Air Max 270 <br><span>Running Collection</span></h2>
+                  <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur corporis labore est, tempore consequatur natus rerum sequi, eos repudiandae ipsa sunt!Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam ut vitae adipisci dicta nesciunt commodi autem, animi aspernatur </p>
+                  <h3>$150.99</h3>
+                  <button>Buy Now</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main><!-- ////////////// End Main ////////////// -->
 <!-- ////////////// Footer ////////////// -->
     <footer class="text-center"></footer>
